// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders 1`] = `
<div
  className="sc-crwTFP hgUhml"
>
  <div
    className="sc-dAEBNM YGnMD"
  >
    <div
      className="sc-dYpzDs leUFvb"
    >
      <div
        className="sc-fStMfJ FRLRL"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-xsHdy lgMUYc"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-fuIOqd fGiRij"
  />
</div>
`;

exports[`Banner renders in mobile mode 1`] = `
<div
  className="sc-crwTFP jBJQKG"
>
  <div
    className="sc-dAEBNM YGnMD"
  >
    <div
      className="sc-dYpzDs leUFvb"
    >
      <div
        className="sc-fStMfJ FRLRL"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-xsHdy lgMUYc"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-fuIOqd fGiRij"
  >
    <span>
      <button
        className="sc-guXXQn fMNwaS"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-dOeoAH eaXcSX"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-guXXQn hHvctl"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-dOeoAH eaXcSX"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders in single line mode 1`] = `
<div
  className="sc-crwTFP hgUhml"
>
  <div
    className="sc-dAEBNM bLDNTO"
  >
    <div
      className="sc-xsHdy iapdmu"
    >
      Your email is not verified. Verify to enable withdrawals.
    </div>
    <div
      className="sc-fuIOqd fGiRij"
    >
      <button
        className="sc-guXXQn grWUkl"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Resend verification link to email ›
        <div
          className="sc-dOeoAH eaXcSX"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner renders with buttons 1`] = `
<div
  className="sc-crwTFP gMjuln"
>
  <div
    className="sc-dAEBNM YGnMD"
  >
    <div
      className="sc-dYpzDs leUFvb"
    >
      <div
        className="sc-fStMfJ FRLRL"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-xsHdy lgMUYc"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-fuIOqd fGiRij"
  >
    <span>
      <button
        className="sc-guXXQn fMNwaS"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-dOeoAH eaXcSX"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-guXXQn hHvctl"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-dOeoAH eaXcSX"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders with buttons RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-crwTFP gMjuln"
  >
    <div
      className="sc-dAEBNM YGnMD"
    >
      <div
        className="sc-dYpzDs leUFvb"
      >
        <div
          className="sc-fStMfJ FRLRL"
        >
          Title here
        </div>
      </div>
      <div
        className="sc-xsHdy lgMUYc"
      >
        Lorem ipsum dolor...
      </div>
    </div>
    <div
      className="sc-fuIOqd fGiRij"
    >
      <span>
        <button
          className="sc-guXXQn fMNwaS"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Discard
          <div
            className="sc-dOeoAH eaXcSX"
          />
        </button>
      </span>
      <span>
        <button
          className="sc-guXXQn hHvctl"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Confirm
          <div
            className="sc-dOeoAH eaXcSX"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with header icon 1`] = `
<div
  className="sc-crwTFP hgUhml"
>
  <div
    className="sc-dAEBNM YGnMD"
  >
    <div
      className="sc-dYpzDs leUFvb"
    >
      <div
        className="sc-fStMfJ FRLRL"
      >
        Title here
      </div>
      <div
        className="sc-bUabYq hQiAFq"
      >
        <svg
          className="sc-gwvkYY"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-xsHdy lgMUYc"
    >
      Lorem ipsum dolor...
    </div>
  </div>
</div>
`;
